🐛 - Stop doc nav overlapping text

--- a/css/scribbler-doc.css
+++ b/css/scribbler-doc.css
@@ -59,7 +59,7 @@ html, body {
 }
 
 .doc__nav ul.fixed {
-  position: fixed;
+  position: sticky;
   top: 2rem;
 }
 
